--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <header>
   <h1>🐯 Tiger Bar</h1>
-  <div class="note" id="note">🎱 Free Billiard</div>
+  <div class="note" id="note"></div>
 </header>
 
 <div class="lang">
@@ -104,21 +104,141 @@ const data = {
     th: "🎱 เล่นบิลเลียดฟรี",
     cn: "🎱 台球免费"
   },
+
   en: {
     "Soft Drinks": [
       ["Water", "50 ฿"], ["Soda Water", "50 ฿"], ["Coke", "50 ฿"], ["Sprite", "50 ฿"],
-      ["Orange Juice", "70 ฿"], ["Apple Juice", "70 ฿"], ["Red Bull", "100 ฿"]
+      ["Tonic Water", "50 ฿"], ["Orange Juice", "70 ฿"], ["Apple Juice", "70 ฿"],
+      ["Pineapple Juice", "70 ฿"], ["Cranberry Juice", "70 ฿"], ["Red Bull", "100 ฿"]
     ],
     "Cocktails (180 ฿)": [
-      ["Margarita"], ["Mai Tai"], ["Pina Colada"], ["Blue Hawaii"], ["B52"], ["Long Island"]
+      ["Margarita"], ["Mai Tai"], ["Pina Colada"], ["Blue Hawaii"], ["Black Russian"],
+      ["White Russian"], ["Cuba Libre"], ["Long Island"], ["Tequila Sunrise"],
+      ["B52"], ["Tom Collins"]
     ],
     "Beer": [
-      ["Leo", "80 ฿"], ["Chang", "80 ฿"], ["Tiger", "80 ฿"], ["Heineken", "80 ฿"], ["Singha", "80 ฿"],
-      ["San Mig Light", "100 ฿"], ["Strongbow", "150 ฿"]
+      ["Leo", "80 ฿"], ["Chang", "80 ฿"], ["Tiger", "80 ฿"], ["My Beer", "80 ฿"],
+      ["Heineken", "80 ฿"], ["Singha", "80 ฿"], ["San Mig Light", "100 ฿"],
+      ["Spy", "100 ฿"], ["Smirnoff Ice", "100 ฿"],
+      ["Strongbow Apple Cider", "150 ฿"], ["Kopparberg Mix Fruit", "180 ฿"]
     ],
     "Wine": [["Red Wine (Bottle)", "1000 ฿"], ["White Wine (Bottle)", "1000 ฿"]],
-    "Whiskey / Spirits": [["Sangsom", "80 ฿"], ["Jack Daniel’s", "100 ฿"], ["Black Label", "150 ฿"], ["Chivas", "180 ฿"]],
-    "Shots": [["Vodka", "80 ฿"], ["Tequila", "160 ฿"], ["Jägermeister", "160 ฿"], ["B52", "180 ฿"]]
+    "Whiskey / Spirits": [
+      ["Sangsom", "80 ฿"], ["Hongthong", "80 ฿"], ["Blend 285", "80 ฿"],
+      ["Bacardi", "80 ฿"], ["Malibu", "80 ฿"], ["Vodka", "80 ฿"], ["Gin", "80 ฿"],
+      ["Bombay", "100 ฿"], ["Jack Daniel’s", "100 ฿"],
+      ["Black Label", "150 ฿"], ["Red Label", "150 ฿"],
+      ["Captain Morgan", "150 ฿"], ["J&B", "180 ฿"], ["Chivas", "180 ฿"],
+      ["Ballantine’s", "180 ฿"], ["Jameson", "180 ฿"], ["Campari", "180 ฿"],
+      ["Bailey’s", "180 ฿"]
+    ],
+    "Shots": [
+      ["Sangsom", "60 ฿"], ["Vodka", "80 ฿"], ["Tequila", "160 ฿"],
+      ["Tequila Rose", "160 ฿"], ["Sambuca", "160 ฿"],
+      ["Jägermeister", "160 ฿"], ["Black Sambuca", "160 ฿"], ["B52", "180 ฿"]
+    ]
+  },
+
+  ru: {
+    "Безалкогольные напитки": [
+      ["Вода", "50 ฿"], ["Содовая", "50 ฿"], ["Кола", "50 ฿"], ["Спрайт", "50 ฿"],
+      ["Тоник", "50 ฿"], ["Апельсиновый сок", "70 ฿"], ["Яблочный сок", "70 ฿"],
+      ["Ананасовый сок", "70 ฿"], ["Клюквенный сок", "70 ฿"], ["Red Bull", "100 ฿"]
+    ],
+    "Коктейли (180 ฿)": [
+      ["Маргарита"], ["Май Тай"], ["Пина Колада"], ["Блю Гавайи"],
+      ["Чёрный русский"], ["Белый русский"], ["Куба Либре"],
+      ["Лонг Айленд"], ["Текила Санрайз"], ["B52"], ["Том Коллинз"]
+    ],
+    "Пиво": [
+      ["Leo", "80 ฿"], ["Chang", "80 ฿"], ["Tiger", "80 ฿"], ["My Beer", "80 ฿"],
+      ["Heineken", "80 ฿"], ["Singha", "80 ฿"], ["San Mig Light", "100 ฿"],
+      ["Spy", "100 ฿"], ["Smirnoff Ice", "100 ฿"],
+      ["Strongbow Apple Cider", "150 ฿"], ["Kopparberg Mix Fruit", "180 ฿"]
+    ],
+    "Вино": [["Красное вино (бутылка)", "1000 ฿"], ["Белое вино (бутылка)", "1000 ฿"]],
+    "Крепкий алкоголь": [
+      ["Sangsom", "80 ฿"], ["Hongthong", "80 ฿"], ["Blend 285", "80 ฿"],
+      ["Bacardi", "80 ฿"], ["Malibu", "80 ฿"], ["Водка", "80 ฿"], ["Джин", "80 ฿"],
+      ["Bombay", "100 ฿"], ["Jack Daniel’s", "100 ฿"],
+      ["Black Label", "150 ฿"], ["Red Label", "150 ฿"],
+      ["Captain Morgan", "150 ฿"], ["J&B", "180 ฿"], ["Chivas", "180 ฿"],
+      ["Ballantine’s", "180 ฿"], ["Jameson", "180 ฿"], ["Campari", "180 ฿"],
+      ["Bailey’s", "180 ฿"]
+    ],
+    "Шоты": [
+      ["Sangsom", "60 ฿"], ["Водка", "80 ฿"], ["Текила", "160 ฿"],
+      ["Tequila Rose", "160 ฿"], ["Самбука", "160 ฿"],
+      ["Jägermeister", "160 ฿"], ["Чёрная самбука", "160 ฿"], ["B52", "180 ฿"]
+    ]
+  },
+
+  th: {
+    "เครื่องดื่มไม่มีแอลกอฮอล์": [
+      ["น้ำเปล่า", "50 ฿"], ["โซดา", "50 ฿"], ["โค้ก", "50 ฿"], ["สไปร์ท", "50 ฿"],
+      ["โทนิค", "50 ฿"], ["น้ำส้ม", "70 ฿"], ["น้ำแอปเปิ้ล", "70 ฿"],
+      ["น้ำสับปะรด", "70 ฿"], ["น้ำแครนเบอร์รี่", "70 ฿"], ["เรดบูล", "100 ฿"]
+    ],
+    "ค็อกเทล (180 ฿)": [
+      ["Margarita"], ["Mai Tai"], ["Pina Colada"], ["Blue Hawaii"],
+      ["Black Russian"], ["White Russian"], ["Cuba Libre"],
+      ["Long Island"], ["Tequila Sunrise"], ["B52"], ["Tom Collins"]
+    ],
+    "เบียร์": [
+      ["Leo", "80 ฿"], ["Chang", "80 ฿"], ["Tiger", "80 ฿"], ["My Beer", "80 ฿"],
+      ["Heineken", "80 ฿"], ["Singha", "80 ฿"], ["San Mig Light", "100 ฿"],
+      ["Spy", "100 ฿"], ["Smirnoff Ice", "100 ฿"],
+      ["Strongbow Apple Cider", "150 ฿"], ["Kopparberg Mix Fruit", "180 ฿"]
+    ],
+    "ไวน์": [["ไวน์แดง (ขวด)", "1000 ฿"], ["ไวน์ขาว (ขวด)", "1000 ฿"]],
+    "วิสกี้ / สุรา": [
+      ["Sangsom", "80 ฿"], ["Hongthong", "80 ฿"], ["Blend 285", "80 ฿"],
+      ["Bacardi", "80 ฿"], ["Malibu", "80 ฿"], ["Vodka", "80 ฿"], ["Gin", "80 ฿"],
+      ["Bombay", "100 ฿"], ["Jack Daniel’s", "100 ฿"],
+      ["Black Label", "150 ฿"], ["Red Label", "150 ฿"],
+      ["Captain Morgan", "150 ฿"], ["J&B", "180 ฿"], ["Chivas", "180 ฿"],
+      ["Ballantine’s", "180 ฿"], ["Jameson", "180 ฿"], ["Campari", "180 ฿"],
+      ["Bailey’s", "180 ฿"]
+    ],
+    "ช็อต": [
+      ["Sangsom", "60 ฿"], ["Vodka", "80 ฿"], ["Tequila", "160 ฿"],
+      ["Tequila Rose", "160 ฿"], ["Sambuca", "160 ฿"],
+      ["Jägermeister", "160 ฿"], ["Black Sambuca", "160 ฿"], ["B52", "180 ฿"]
+    ]
+  },
+
+  cn: {
+    "无酒精饮料": [
+      ["矿泉水", "50 ฿"], ["苏打水", "50 ฿"], ["可乐", "50 ฿"], ["雪碧", "50 ฿"],
+      ["汤力水", "50 ฿"], ["橙汁", "70 ฿"], ["苹果汁", "70 ฿"],
+      ["菠萝汁", "70 ฿"], ["蔓越莓汁", "70 ฿"], ["红牛", "100 ฿"]
+    ],
+    "鸡尾酒 (180 ฿)": [
+      ["玛格丽塔"], ["迈泰"], ["椰林飘香"], ["蓝色夏威夷"],
+      ["黑俄罗斯"], ["白俄罗斯"], ["自由古巴"],
+      ["长岛冰茶"], ["龙舌兰日出"], ["B52"], ["汤姆柯林斯"]
+    ],
+    "啤酒": [
+      ["Leo", "80 ฿"], ["Chang", "80 ฿"], ["Tiger", "80 ฿"], ["My Beer", "80 ฿"],
+      ["Heineken", "80 ฿"], ["Singha", "80 ฿"], ["San Mig Light", "100 ฿"],
+      ["Spy", "100 ฿"], ["Smirnoff Ice", "100 ฿"],
+      ["Strongbow 苹果酒", "150 ฿"], ["Kopparberg 混合水果", "180 ฿"]
+    ],
+    "葡萄酒": [["红葡萄酒（瓶）", "1000 ฿"], ["白葡萄酒（瓶）", "1000 ฿"]],
+    "烈酒": [
+      ["Sangsom", "80 ฿"], ["Hongthong", "80 ฿"], ["Blend 285", "80 ฿"],
+      ["Bacardi", "80 ฿"], ["Malibu", "80 ฿"], ["伏特加", "80 ฿"], ["金酒", "80 ฿"],
+      ["Bombay", "100 ฿"], ["Jack Daniel’s", "100 ฿"],
+      ["Black Label", "150 ฿"], ["Red Label", "150 ฿"],
+      ["Captain Morgan", "150 ฿"], ["J&B", "180 ฿"], ["Chivas", "180 ฿"],
+      ["Ballantine’s", "180 ฿"], ["Jameson", "180 ฿"], ["Campari", "180 ฿"],
+      ["Bailey’s", "180 ฿"]
+    ],
+    "烈酒小杯": [
+      ["Sangsom", "60 ฿"], ["伏特加", "80 ฿"], ["龙舌兰", "160 ฿"],
+      ["Tequila Rose", "160 ฿"], ["桑布卡", "160 ฿"],
+      ["野格", "160 ฿"], ["黑桑布卡", "160 ฿"], ["B52", "180 ฿"]
+    ]
   }
 };
 
@@ -148,7 +268,7 @@ function render() {
   }
 }
 
-render();
+setLang('en');
 </script>
 
 </body>
