--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ h1{text-align:center;margin:10px 0 5px}
 const data={
  note:{en:'🎱 Free Billiard',ru:'🎱 Бильярд бесплатен',th:'🎱 เล่นพูลฟรี',cn:'🎱 台球免费'},
  titles:{
-  beer:{en:'Drinks',ru:'Напитки',th:'เครื่องดื่ม',cn:'饮品'},
+  beer:{en:'Beer / Drinks',ru:'Пиво и напитки',th:'เบียร์และเครื่องดื่ม',cn:'啤酒与饮品'},
   wine:{en:'Wine',ru:'Вино',th:'ไวน์',cn:'葡萄酒'},
   spirits:{en:'Spirits',ru:'Крепкий алкоголь',th:'สุรา',cn:'烈酒'},
+  whiskey:{en:'Whiskey',ru:'Виски',th:'วิสกี้',cn:'威士忌'},
   shots:{en:'Shots',ru:'Шоты',th:'ช็อต',cn:'短饮'},
   cocktails:{en:'Cocktails (tap for ingredients)',ru:'Коктейли (нажмите для состава)',th:'ค็อกเทล (กดดูส่วนผสม)',cn:'鸡尾酒（点击查看配料）'}
  },
@@ -58,7 +59,10 @@ const data={
    ['Red wine (glass)','180 THB'],['White wine (glass)','180 THB'],['Bottle','1000 THB']
   ],
   spirits:[
-   ['Bacardi','160 THB'],['Malibu','160 THB'],['Vodka','180 THB'],['Gin','180 THB'],['Bombay','180 THB'],['Whiskey (Jack Daniel’s / Black Label / Red Label / Captain Morgan)','180 THB']
+   ['Bacardi','160 THB'],['Malibu','160 THB'],['Vodka','180 THB'],['Gin','180 THB'],['Bombay','180 THB']
+  ],
+  whiskey:[
+   ['Jack Daniel’s','180 THB'],['Black Label','180 THB'],['Red Label','180 THB'],['Captain Morgan','180 THB']
   ],
   shots:[
    ['Vodka shot','150 THB'],['Tequila shot','150–160 THB']
