--- a/index.html
+++ b/index.html
@@ -53,32 +53,37 @@ const data={
  },
  items:{
   beer:[
-   ['Water','30 THB'],['Singha','100 THB'],['Heineken','100 THB'],['San Mig Light','100 THB'],['SPY','150 THB'],['Smirnoff Ice','150 THB'],['Strongbow Apple Cider','180 THB'],['Kopparberg (Mixed Fruit / Strawberry & Lime)','250 THB']
+   ['Water','30 THB'],['M-150','50 THB'],['Coca-Cola','50 THB'],['Coke Light','50 THB'],['Coke Diet','50 THB'],['Sprite','50 THB'],['Fanta','50 THB'],['Schweppes Lemon','50 THB'],['Orange Juice','70 THB'],['Apple Juice','70 THB'],['Pineapple Juice','70 THB'],['Cranberry Juice','70 THB'],['Soda Water','50 THB'],['Tonic Water','50 THB'],['Red Bull','100 THB'],['Singha','100 THB'],['Leo','80 THB'],['Chang','80 THB'],['Tiger','80 THB'],['Heineken','80 THB'],['San Mig Light','100 THB'],['SPY','150 THB'],['Smirnoff Ice','150 THB'],['Strongbow Apple Cider','180 THB'],['Kopparberg (Mixed Fruit / Strawberry & Lime)','250 THB']
+  ],['Coca-Cola','50 THB'],['Sprite','50 THB'],['Fanta','50 THB'],['Soda Water','50 THB'],['Tonic Water','50 THB'],['Red Bull','80 THB'],['Singha','100 THB'],['Heineken','100 THB'],['San Mig Light','100 THB'],['SPY','150 THB'],['Smirnoff Ice','150 THB'],['Strongbow Apple Cider','180 THB'],['Kopparberg (Mixed Fruit / Strawberry & Lime)','250 THB']
+  ],['Singha','100 THB'],['Heineken','100 THB'],['San Mig Light','100 THB'],['SPY','150 THB'],['Smirnoff Ice','150 THB'],['Strongbow Apple Cider','180 THB'],['Kopparberg (Mixed Fruit / Strawberry & Lime)','250 THB']
   ],
   wine:[
    ['Red wine (glass)','180 THB'],['White wine (glass)','180 THB'],['Bottle','1000 THB']
   ],
-  spirits:[
-   ['Bacardi','160 THB'],['Malibu','160 THB'],['Vodka','180 THB'],['Gin','180 THB'],['Bombay','180 THB']
+  ['Malibu','160 THB'],['Vodka','180 THB'],['Gin','180 THB'],['Bombay','180 THB']
   ],
   whiskey:[
-   ['Jack Daniel’s','180 THB'],['Black Label','180 THB'],['Red Label','180 THB'],['Captain Morgan','180 THB']
+   ['Jack Daniel’s','180 THB'],['Black Label','180 THB'],['Red Label','180 THB'],['Captain Morgan','180 THB'],['Chivas Regal','180 THB'],['Jameson','180 THB'],['Ballantine’s','180 THB'],['Sangsom','80 THB'],['Hongtong','80 THB'],['Blend 225','225 THB'],['Bacardi','160 THB'],['Malibu','160 THB'],['Vodka','180 THB'],['Gin','180 THB'],['Bombay','180 THB']
+  ],['Black Label','180 THB'],['Red Label','180 THB'],['Captain Morgan','180 THB'],['Chivas Regal','180 THB'],['Jameson','180 THB'],['Ballantine’s','180 THB']
+  ],['Black Label','180 THB'],['Red Label','180 THB'],['Captain Morgan','180 THB']
   ],
   shots:[
-   ['Vodka shot','150 THB'],['Tequila shot','150–160 THB']
+   ['Vodka shot','150 THB'],['Tequila shot','150–160 THB'],['Whiskey shot','180 THB'],['Rum shot','160 THB'],['Gin shot','180 THB'],['Sangsom shot','60 THB']
+  ],['Tequila shot','150–160 THB'],['Whiskey shot','180 THB'],['Rum shot','160 THB'],['Gin shot','180 THB']
+  ],['Tequila shot','150–160 THB']
   ],
   cocktails:[
-   {name:'Margarita',price:'100 THB',desc:{en:'Tequila (Blanco), Triple Sec (Cointreau), fresh lime juice',ru:'Текила (бланко), трипл сек (Cointreau), свежий сок лайма',th:'เตกีล่า บลังโก ทริปเปิลเซค น้ำมะนาวสด',cn:'银龙舌兰、橙味利口酒、鲜青柠汁'}},
-   {name:'Mai Tai',price:'100 THB',desc:{en:'White rum, dark rum, orange curaçao, orgeat syrup, fresh lime juice',ru:'Светлый ром, тёмный ром, апельсиновый кюрасао, оржеат, сок лайма',th:'รัมขาว รัมดำ คูราเซาส้ม ออร์เจียต น้ำมะนาว',cn:'白朗姆、黑朗姆、橙皮酒、杏仁糖浆、青柠汁'}},
-   {name:'Piña Colada',price:'100 THB',desc:{en:'White rum, coconut cream, pineapple juice',ru:'Светлый ром, кокосовые сливки, ананасовый сок',th:'รัมขาว ครีมมะพร้าว น้ำสับปะรด',cn:'白朗姆、椰子奶油、菠萝汁'}},
-   {name:'Blue Hawaii',price:'100 THB',desc:{en:'White rum, Blue Curaçao, pineapple juice, fresh lemon juice',ru:'Светлый ром, блю кюрасао, ананасовый сок, лимонный сок',th:'รัมขาว บลูคูราเซา น้ำสับปะรด น้ำเลมอน',cn:'白朗姆、蓝橙酒、菠萝汁、柠檬汁'}},
-   {name:'Black Russian',price:'100 THB',desc:{en:'Vodka, coffee liqueur',ru:'Водка, кофейный ликёр',th:'วอดก้า ลิเคียวร์กาแฟ',cn:'伏特加、咖啡利口酒'}},
-   {name:'White Russian',price:'100 THB',desc:{en:'Vodka, coffee liqueur, cream or milk',ru:'Водка, кофейный ликёр, сливки или молоко',th:'วอดก้า ลิเคียวร์กาแฟ ครีมหรือนม',cn:'伏特加、咖啡利口酒、奶油或牛奶'}},
-   {name:'Cuba Libre',price:'100 THB',desc:{en:'White rum, cola, fresh lime juice',ru:'Светлый ром, кола, сок лайма',th:'รัมขาว โคล่า น้ำมะนาว',cn:'白朗姆、可乐、青柠汁'}},
-   {name:'Long Island Iced Tea',price:'100 THB',desc:{en:'Vodka, gin, white rum, tequila, triple sec, fresh lemon juice, cola',ru:'Водка, джин, светлый ром, текила, трипл сек, лимонный сок, кола',th:'วอดก้า จิน รัมขาว เตกีล่า ทริปเปิลเซค น้ำเลมอน โคล่า',cn:'伏特加、金酒、白朗姆、龙舌兰、橙酒、柠檬汁、可乐'}},
-   {name:'Tequila Sunrise',price:'100 THB',desc:{en:'Tequila, orange juice, grenadine',ru:'Текила, апельсиновый сок, гренадин',th:'เตกีล่า น้ำส้ม เกรนาดีน',cn:'龙舌兰、橙汁、石榴糖浆'}},
-   {name:'B-52',price:'100 THB',desc:{en:'Coffee liqueur, Irish cream, triple sec',ru:'Кофейный ликёр, ирландский крем, трипл сек',th:'ลิเคียวร์กาแฟ ไอริชครีม ทริปเปิลเซค',cn:'咖啡利口酒、爱尔兰奶油、橙味利口酒'}},
-   {name:'Tom Collins',price:'100 THB',desc:{en:'Gin, fresh lemon juice, sugar syrup, soda water',ru:'Джин, лимонный сок, сахарный сироп, сода',th:'จิน น้ำเลมอน ไซรัป โซดา',cn:'金酒、柠檬汁、糖浆、苏打水'}}
+   {name:'Margarita',price:'180 THB',desc:{en:'Tequila (Blanco), Triple Sec (Cointreau), fresh lime juice',ru:'Текила (бланко), трипл сек (Cointreau), свежий сок лайма',th:'เตกีล่า บลังโก ทริปเปิลเซค น้ำมะนาวสด',cn:'银龙舌兰、橙味利口酒、鲜青柠汁'}},
+   {name:'Mai Tai',price:'180 THB',desc:{en:'White rum, dark rum, orange curaçao, orgeat syrup, fresh lime juice',ru:'Светлый ром, тёмный ром, апельсиновый кюрасао, оржеат, сок лайма',th:'รัมขาว รัมดำ คูราเซาส้ม ออร์เจียต น้ำมะนาว',cn:'白朗姆、黑朗姆、橙皮酒、杏仁糖浆、青柠汁'}},
+   {name:'Piña Colada',price:'180 THB',desc:{en:'White rum, coconut cream, pineapple juice',ru:'Светлый ром, кокосовые сливки, ананасовый сок',th:'รัมขาว ครีมมะพร้าว น้ำสับปะรด',cn:'白朗姆、椰子奶油、菠萝汁'}},
+   {name:'Blue Hawaii',price:'180 THB',desc:{en:'White rum, Blue Curaçao, pineapple juice, fresh lemon juice',ru:'Светлый ром, блю кюрасао, ананасовый сок, лимонный сок',th:'รัมขาว บลูคูราเซา น้ำสับปะรด น้ำเลมอน',cn:'白朗姆、蓝橙酒、菠萝汁、柠檬汁'}},
+   {name:'Black Russian',price:'180 THB',desc:{en:'Vodka, coffee liqueur',ru:'Водка, кофейный ликёр',th:'วอดก้า ลิเคียวร์กาแฟ',cn:'伏特加、咖啡利口酒'}},
+   {name:'White Russian',price:'180 THB',desc:{en:'Vodka, coffee liqueur, cream or milk',ru:'Водка, кофейный ликёр, сливки или молоко',th:'วอดก้า ลิเคียวร์กาแฟ ครีมหรือนม',cn:'伏特加、咖啡利口酒、奶油或牛奶'}},
+   {name:'Cuba Libre',price:'180 THB',desc:{en:'White rum, cola, fresh lime juice',ru:'Светлый ром, кола, сок лайма',th:'รัมขาว โคล่า น้ำมะนาว',cn:'白朗姆、可乐、青柠汁'}},
+   {name:'Long Island Iced Tea',price:'180 THB',desc:{en:'Vodka, gin, white rum, tequila, triple sec, fresh lemon juice, cola',ru:'Водка, джин, светлый ром, текила, трипл сек, лимонный сок, кола',th:'วอดก้า จิน รัมขาว เตกีล่า ทริปเปิลเซค น้ำเลมอน โคล่า',cn:'伏特加、金酒、白朗姆、龙舌兰、橙酒、柠檬汁、可乐'}},
+   {name:'Tequila Sunrise',price:'180 THB',desc:{en:'Tequila, orange juice, grenadine',ru:'Текила, апельсиновый сок, гренадин',th:'เตกีล่า น้ำส้ม เกรนาดีน',cn:'龙舌兰、橙汁、石榴糖浆'}},
+   {name:'B-52',price:'180 THB',desc:{en:'Coffee liqueur, Irish cream, triple sec',ru:'Кофейный ликёр, ирландский крем, трипл сек',th:'ลิเคียวร์กาแฟ ไอริชครีม ทริปเปิลเซค',cn:'咖啡利口酒、爱尔兰奶油、橙味利口酒'}},
+   {name:'Tom Collins',price:'180 THB',desc:{en:'Gin, fresh lemon juice, sugar syrup, soda water',ru:'Джин, лимонный сок, сахарный сироп, сода',th:'จิน น้ำเลมอน ไซรัป โซดา',cn:'金酒、柠檬汁、糖浆、苏打水'}}
   ]
  }
 };
